[project]
name = "podbug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "awepo", email = "dc22762@um.edu.mo" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
podbug = "podbug:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
