[project]
name = "podbug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "awepo", email = "dc22762@um.edu.mo" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
podbug = "podbug:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
